<resources>
    <string name="app_name">BYOP</string>
    <string name="title_activity_sign_in">BYOP</string>

    <!--General-->
    <string name="folderName">BYOP POIS</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="saving">Saving…</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="help">Help</string>
    <string name="uploading">Uploading…</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Signed in as: %s</string>
    <string name="signed_in">Signed in</string>
    <string name="signing_in">Signing in…</string>
    <string name="signed_out">Signed out</string>
    <string name="signed_in_err">"Error: please check logs."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Loading…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Google Play Services Error: %i</string>

    <!-- Button labels -->
    <string name="goToPOIS">POIS Management</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect, revoke and clean app data</string>
    <string name="are_you_sure_clear_data">Are you sure? This action will clean all the configuration data stored in the application</string>

    <!-- Content Description for images -->
    <string name="desc_lg_icon">Liquid Logo</string>
    <string name="desc_byop_logo">Byop Logo</string>


    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>
    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>
    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>


    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>



    <!--Contextual Menu -->
    <string name="context_menu_title">Actions</string>
    <string name="context_menu_delete">Delete</string>
    <string name="context_menu_view">View</string>
    <string name="context_menu_edit">Edit</string>
    <string name="context_menu_share">Upload to PW Beacon</string>

    <!--Add Document-->
    <string name="add_document_header">New POIS File</string>
    <string name="new_document_name">Name</string>
    <string name="new_document_description">Description</string>
    <string name="save_new_document">Save</string>
    <string name="empty_name_error">The name must not be empty</string>

    <!--Rename Document-->
    <string name="edit_document_header">Rename Document</string>
    <string name="folderList">Pois Documents</string>
    <string name="poisList">Pois in</string>


    <!--Edit POI-->
    <string name="edit_poi_name">POI Name</string>
    <string name="edit_poi_desc">POI Description</string>
    <string name="poi_data">POI DATA</string>
    <string name="edit_poi_latitude">Latitude</string>
    <string name="edit_poi_longitude">Longitude</string>
    <string name="editing">Editing</string>
    <string name="editing_poi">Editing Poi</string>
    <string name="viewing_poi">Viewing Poi</string>
    <string name="new_poi">New Poi</string>
    <string name="addPoi">Add POI</string>

    <!--Beacons-->
    <string name="config_no_beacons_found">No Beacons Found</string>
    <string name="title_edit_urls">Edit URLs</string>
    <string name="config_searching_for_beacons_text">Put your beacon into config mode</string>
    <string name="action_config">Edit URLs</string>
    <string name="action_about">About</string>
    <string name="config_url_read_error">Error Reading URL</string>
    <string name="config_url_saved">URL Saved</string>
    <string name="config_url_error">Error Saving URL</string>
    <string name="config_found_near_beacon">Beacon found!</string>
    <string name="config_found_far_beacon">Move Beacon closer!</string>
    <string name="config_writing_to_beacon_text">Saving to Beacon</string>
    <string name="url_shortening_error">URL is too long. Please use a shortener.</string>
    <string name="url_charset_error">Non-ASCII characters unsupported in URL. Please use a shortener.</string>
    <string name="config_address_label">Address</string>
    <string name="config_edit_url_label">URL</string>
    <string name="config_save_url_button">SAVE URL</string>
    <string name="configure_beacon">Configure Beacon</string>
    <string name="error_bluetooth_support">Device does not support Bluetooth</string>
    <string name="discovery_service_prefs_key">gsoc.google.com.byop.DISCOVERY_SERVICE_PREFS</string>
    <plurals name="numFoundBeacons">
        <item quantity="one">Beacon Nearby</item>
        <item quantity="other">Beacons Nearby</item>
    </plurals>
    <string name="summary_notification_pull_down">Pull down to see them.</string>
    <string name="nearby_beacon_favicon_content_description">favicon for the given URL for this
        entry</string>
    <string name="title_nearby_beacons">Nearby Beacons</string>
    <string name="ranging_debug_tx_power_prefix">tx: </string>
    <string name="ranging_debug_rssi_prefix">rssi: </string>
    <string name="ranging_debug_distance_prefix">distance: </string>
    <string name="ranging_debug_region_prefix">region: </string>
    <string name="metadata_debug_rank_prefix">rank: </string>
    <string name="metadata_debug_scan_time_prefix">scan: </string>
    <string name="metadata_debug_pws_trip_time_prefix">pws: </string>
    <string name="metadata_debug_groupid_prefix">group: </string>
    <string name="empty_nearby_beacons_list_text">Searching for beacons</string>
    <string name="notification_view_more_beacons">VIEW MORE</string>
    <string name="user_opted_in_flag">userOptedIn</string>
    <string name="main_prefs_key">physical_web_preferences</string>
    <string name="saving_url">The URL to the document is being uploaded to the Beacon</string>

    <!-- CLOSE DIALOG-->
    <string name="close">Exit</string>
    <string name="close_body">Do you want to leave?</string>
    <string name="Accept">Accept</string>
    <string name="cancel_dialog">Cancel</string>
    <string name="creating_folder">Creating Folder</string>
    <string name="deleting">Deleting</string>

    <!--Errors-->
    <string name="no_network_connection">No network connection available</string>
    <string name="google_account_needed">This app needs to access your Google account (via Contacts).</string>
    <string name="following_error">The following error occurred:</string>
    <string name="request_cancelled">Request cancelled.</string>
    <string name="play_services_needed">This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app.</string>
    <string name="something_wrong">Something went wrong:</string>
    <string name="passwords_no_match">The passwords are not equal</string>

    <!--_Help-->
    <string name="addPoiHelp">Add POI to List</string>
    <string name="uploadDocHelp">Upload document to Physical Web Beacon</string>
    <string name="documentListHelpTitle">Document Management Help</string>
    <string name="gotIt">Got It</string>
    <string name="viewPoiHelp">View POI in map</string>
    <string name="editPOIHelp">Edit POI</string>
    <string name="deletePOIHelp">Remove POI</string>
    <string name="poisListHelpTitle">POIs Management Help</string>
    <string name="newDocDocHelp">Add a new POI List</string>
    <string name="newPoiHelp">Add new POI location</string>
    <string name="pcital">Parc Científic i Tecnològic</string>
    <string name="parsingError">Error parsing XML Document</string>


    <!--Administrative menu-->
    <string name="enter_password">Enter Administrative Password</string>
    <string name="lg_shared_folder">Name of the drive shared folder by Liquid Galaxy</string>
    <string name="uploadDocSuccess">Document Correctly Uploaded to Shared Drive</string>
    <string name="uploadDocFailure">Failed</string>
    <string name="galaxy_drive">Galaxy Drive Folder Configuration</string>
    <string name="lg_drive_folder">LG Shared Folder</string>
    <string name="uploadingLG">Uploading to Liquid Galaxy Folder</string>
    <string name="about">About</string>
    <string name="about_byop_message">About Bring Your Own Pois</string>
    <string name="aboutDocText1">This app has been developed thanks to GSOC 2016 Program</string>
    <string name="aboutDocText2">by Ivan Josa Llovera (ivanjosallovera@gmail.com)</string>
    <string name="aboutDocText3">https://github.com/LiquidGalaxyLAB/BYOP</string>


</resources>
