<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/viewPOIMenuItem"
        android:title="@string/context_menu_view"
        android:icon="@drawable/ic_remove_red_eye_black_24dp"
        app:showAsAction="ifRoom"
        android:background="@null" />

    <item
        android:id="@+id/editPoiMenuItem"
        android:title="@string/context_menu_edit"
        android:icon="@drawable/ic_edit_black_24dp"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/deletePoiMenuItem"
        android:icon="@drawable/ic_delete_forever_black_24dp"
        android:tint="@color/red"
        android:title="@string/context_menu_delete"
        app:showAsAction="ifRoom" />
</menu>