<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--<item-->
    <!--android:id="@+id/action_help"-->
    <!--android:icon="@drawable/ic_help_black_48dp"-->
    <!--android:title="@string/help"-->
    <!--app:showAsAction="always"-->
    <!--android:orderInCategory="0" />-->

    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/lg_icon_trans"
        android:title="@string/show_advanced_settings"
        app:showAsAction="never"
        android:orderInCategory="0" />

    <item
        android:id="@+id/action_logout"
        android:icon="@drawable/logout"
        android:title="@string/sign_out"
        app:showAsAction="never"
        android:orderInCategory="1" />

    <item
        android:id="@+id/action_disconnect"
        android:icon="@drawable/disconnect"
        android:title="@string/disconnect"
        app:showAsAction="never"
        android:orderInCategory="2" />

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never"
        android:orderInCategory="3" />


</menu>