<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_poi_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <EditText
            android:id="@+id/edit_poi_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_poi_name"
            android:inputType="textCapWords" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_poi_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <EditText
            android:id="@+id/edit_poi_desc_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_poi_desc"
            android:inputType="textCapWords"
            android:gravity="top"
            android:lines="5" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_poi_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <EditText
            android:id="@+id/edit_poi_latitude_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_poi_latitude"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_poi_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <EditText
            android:id="@+id/edit_poi_longitude_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edit_poi_longitude"
            android:inputType="number" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_edit_poi"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/blue_grey_900"
        android:text="@string/save_new_document"
        android:textColor="@android:color/white" />

</LinearLayout>


